modified the schema and installer, added more tools

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ DB_USER = bieco
 DB_PASSWORD = biecoroot
 DB_DATABASE = biecoplatform
 
-# connection to the email sending server
+# connection to the email sending server (not used in more recent versions)
 EMAIL_HOST = mail.example.com
 EMAIL_PORT = 587
 EMAIL_USERNAME = user@example.com
