--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -139,7 +139,7 @@ services:
             - bieco-net
 
 
-    # ---- FUZZING TOOL (GRADIANT) ----
+    # ---- FUZZING TOOL, FORECASTING TOOL, DETECTION TOOL (GRADIANT) ----
     fuzzing-db:
         image: mysql:5.7
         restart: unless-stopped
@@ -176,6 +176,33 @@ services:
         networks:
             - bieco-net
 
+    forecasting-tool:
+        image: harbor.gradiant.org/syp-bieco-pr-01333/forecasting-tool
+        read_only: true
+        restart: unless-stopped
+        environment:
+            TOOL_TOKEN: YUdHm0PnPJCyP
+            ORCHESTRATOR_TOKEN: DUKocxXt3O6C5
+            ORCHESTRATOR_URL: http://bieco-orchestrator:4000
+            ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
+        depends_on:
+            - bieco-orchestrator
+        networks:
+            - bieco-net
+
+    detection-tool:
+        image: harbor.gradiant.org/syp-bieco-pr-01333/detection-tool
+        restart: unless-stopped
+        environment:
+            TOOL_TOKEN: YUdHm0PnPJCyP
+            ORCHESTRATOR_TOKEN: XkYAaJwBvBcJA
+            ORCHESTRATOR_URL: http://bieco-orchestrator:4000
+            ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
+        depends_on:
+            - bieco-orchestrator
+        networks:
+            - bieco-net
+
     # ---- MUD Updater (UMU) ----
     mud-updater:
         image: dridix/umu-bieco:umu-image
@@ -183,6 +210,8 @@ services:
             - "5555:5555"
         networks:
             - bieco-net
+        volumes:
+            - bieco-data:/platform
     
     # ---- Runtime Monitoring (CNR) ----
     runtime-monitoring:
@@ -205,7 +234,6 @@ services:
             - bieco-net
         volumes:
             - bieco-data:/platform
-
     
     # ---- Failure Prediction (UTC) ----
     failure-prediction:
