--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,6 @@ services:
         restart: unless-stopped
         networks:
             - bieco-net
-        # DB ports are only used in debugging, the db should not be available
-        # in the production environment. todo disable this in production
         ports:
             - "${DB_PUBLIC_PORT}:3306"
         environment:
@@ -41,7 +39,6 @@ services:
             - "bieco-mysql"
         networks:
             - bieco-net
-    
     # UI Component for the platform
     bieco-ui:
         image: holisun/bieco-ui:0.2.0
@@ -54,13 +51,11 @@ services:
                 "bieco.orchestrator.token" : "iVBQ#L;*4a5o78",
                 "bieco.platform.version" : "1.3.2",
                 "bieco.licenseServerUrl" : "http://bieco-license-server.local/api/v1/validate",
-
                 "spring.datasource.url"  : "jdbc:mysql://bieco-mysql:3306/${DB_DATABASE}?useSSL=false",
                 "spring.datasource.username" : "${DB_USER}",
                 "spring.datasource.password" : "${DB_PASSWORD}",
                 "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
                 "spring.jpa.hibernate.ddl-auto" : "none",
-                
                 "spring.mail.host" : "${EMAIL_HOST}",
                 "spring.mail.port" : "${EMAIL_PORT}",
                 "spring.mail.username" : "${EMAIL_USERNAME}",
@@ -90,19 +85,19 @@ services:
             - bieco-net
     
     # ---- Predictive Simulation (IESE) ----
-    # predictive-simulation:
-    #     image: emiliacioroaica/ps_prototype:latest
-    #     depends_on:
-    #         - "activemq"
-    #     restart: unless-stopped
-    #     networks:
-    #         - bieco-net
-    #     environment:
-    #         SPRING_APPLICATION_JSON: '{
-    #             "orchestratorToken" : "6sdQpBgkrL6yu",
-    #             "orchestratorUrl" : "http://bieco-orchestrator:4000/orchestrator/biecointerface",
-    #             "token" : "32z27348127482371kk8(())=)=)(=))(76hgh))",
-    #             "AMQ_URL" : "tcp://activemq:61616"}'
+    predictive-simulation:
+        image: emiliacioroaica/ps_prototype:latest
+        depends_on:
+            - "activemq"
+        restart: unless-stopped
+        networks:
+            - bieco-net
+        environment:
+            SPRING_APPLICATION_JSON: '{
+                "orchestratorToken" : "6sdQpBgkrL6yu",
+                "orchestratorUrl" : "http://bieco-orchestrator:4000/orchestrator/biecointerface",
+                "token" : "32z27348127482371kk8(())=)=)(=))(76hgh))",
+                "AMQ_URL" : "tcp://activemq:61616"}'
 
     activemq:
         image: rmohr/activemq:latest
@@ -118,119 +113,119 @@ services:
         networks:
             - bieco-net
 
-    # # ---- Security Scorer (7B) ----
-    # api:
-    #     image: rpiliszek7b/bieco_security_scorer_api:latest
-    #     read_only: true
-    #     networks:
-    #         - bieco-net
+    # ---- Security Scorer (7B) ----
+    api:
+        image: rpiliszek7b/bieco_security_scorer_api:latest
+        read_only: true
+        networks:
+            - bieco-net
         
-    # security-scorer:
-    #     image: rpiliszek7b/bieco_security_scorer_integrator:latest
-    #     read_only: true
-    #     environment:
-    #         ORCHESTRATOR_TOKEN: rK6ILPiurtfFV
-    #         ORCHESTRATOR_URL: http://bieco-orchestrator:4000/orchestrator/biecointerface
-    #         INTEGRATOR_TOKEN: JAD7A6WAD454AS33AF4
-    #         TOOL_URL: http://api:8000/estimate_risk
-    #     tmpfs:
-    #         - /tmp
-    #     networks:
-    #         - bieco-net
+    security-scorer:
+        image: rpiliszek7b/bieco_security_scorer_integrator:latest
+        read_only: true
+        environment:
+            ORCHESTRATOR_TOKEN: rK6ILPiurtfFV
+            ORCHESTRATOR_URL: http://bieco-orchestrator:4000/orchestrator/biecointerface
+            INTEGRATOR_TOKEN: JAD7A6WAD454AS33AF4
+            TOOL_URL: http://api:8000/estimate_risk
+        tmpfs:
+            - /tmp
+        networks:
+            - bieco-net
 
-    # # ---- FUZZING TOOL, FORECASTING TOOL, DETECTION TOOL (GRADIANT) ----
-    # fuzzing-db:
-    #     image: mysql:5.7
-    #     restart: unless-stopped
-    #     environment:
-    #         MYSQL_DATABASE: 'fuzzing'
-    #         MYSQL_USER: 'user'
-    #         MYSQL_PASSWORD: ${DB_PASSWORD}
-    #         MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-    #     ports:
-    #         - '13306:3306'
-    #     networks:
-    #         - bieco-net
-    #     volumes:
-    #         - bieco-data-fuzzing:/var/lib/mysql
+    # ---- FUZZING TOOL, FORECASTING TOOL, DETECTION TOOL (GRADIANT) ----
+    fuzzing-db:
+        image: mysql:5.7
+        restart: unless-stopped
+        environment:
+            MYSQL_DATABASE: 'fuzzing'
+            MYSQL_USER: 'user'
+            MYSQL_PASSWORD: ${DB_PASSWORD}
+            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+        ports:
+            - '13306:3306'
+        networks:
+            - bieco-net
+        volumes:
+            - bieco-data-fuzzing:/var/lib/mysql
     
-    # fuzzing-tool:
-    #     image: harbor.gradiant.org/syp-bieco-pr-01333/fuzzing-tool:latest
-    #     restart: unless-stopped
-    #     environment:
-    #         TOOL_TOKEN: 8Xoz0OlwRB+sumesL6n67nuwG7cg
-    #         ORCHESTRATOR_TOKEN: YUdHm0PnPJCyP
-    #         ORCHESTRATOR_URL: http://bieco-orchestrator:4000
-    #         ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
-    #         FUZZDB_DRIVER: 'mysql+asyncmy'
-    #         FUZZDB_HOST: 'fuzzing-db'
-    #         FUZZDB_PORT: 3306
-    #         FUZZDB_USER: 'root'
-    #         FUZZDB_PASSWORD: ${DB_PASSWORD}
-    #         # API-AUTHORIZATION-BEARER-TOKEN: Bearer token-here
-    #     volumes:
-    #        - bieco-data:/platform
-    #     depends_on:
-    #         - fuzzing-db
-    #         - bieco-orchestrator
-    #     networks:
-    #         - bieco-net
+    fuzzing-tool:
+        image: harbor.gradiant.org/syp-bieco-pr-01333/fuzzing-tool:latest
+        restart: unless-stopped
+        environment:
+            TOOL_TOKEN: 8Xoz0OlwRB+sumesL6n67nuwG7cg
+            ORCHESTRATOR_TOKEN: YUdHm0PnPJCyP
+            ORCHESTRATOR_URL: http://bieco-orchestrator:4000
+            ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
+            FUZZDB_DRIVER: 'mysql+asyncmy'
+            FUZZDB_HOST: 'fuzzing-db'
+            FUZZDB_PORT: 3306
+            FUZZDB_USER: 'root'
+            FUZZDB_PASSWORD: ${DB_PASSWORD}
+            # API-AUTHORIZATION-BEARER-TOKEN: Bearer token-here
+        volumes:
+           - bieco-data:/platform
+        depends_on:
+            - fuzzing-db
+            - bieco-orchestrator
+        networks:
+            - bieco-net
 
-    # forecasting-tool:
-    #     image: harbor.gradiant.org/syp-bieco-pr-01333/forecasting-tool
-    #     restart: unless-stopped
-    #     environment:
-    #         TOOL_TOKEN: 8Xoz0OlwRB+sumesL6n67nuwG7cg
-    #         ORCHESTRATOR_TOKEN: YUdHm0PnPJCyP
-    #         ORCHESTRATOR_URL: http://bieco-orchestrator:4000
-    #         ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
-    #         TOKEN_TWITTER: AAAAAAAAAAAAAAAAAAAAAMSKgQEAAAAAR5eW3Lh2GlesFpl0rqiIPBcC5gA%3DU0u5XDi9IwzH9xcGG7d7Rcy9BUXhFgxIBDk7ACjE80y11QpGXr
-    #     volumes:
-    #         - bieco-data:/platform
-    #     depends_on:
-    #         - bieco-orchestrator
-    #     networks:
-    #         - bieco-net
+    forecasting-tool:
+        image: harbor.gradiant.org/syp-bieco-pr-01333/forecasting-tool
+        restart: unless-stopped
+        environment:
+            TOOL_TOKEN: 8Xoz0OlwRB+sumesL6n67nuwG7cg
+            ORCHESTRATOR_TOKEN: YUdHm0PnPJCyP
+            ORCHESTRATOR_URL: http://bieco-orchestrator:4000
+            ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
+            TOKEN_TWITTER: AAAAAAAAAAAAAAAAAAAAAMSKgQEAAAAAR5eW3Lh2GlesFpl0rqiIPBcC5gA%3DU0u5XDi9IwzH9xcGG7d7Rcy9BUXhFgxIBDk7ACjE80y11QpGXr
+        volumes:
+            - bieco-data:/platform
+        depends_on:
+            - bieco-orchestrator
+        networks:
+            - bieco-net
 
-    # detection-tool:
-    #     image: harbor.gradiant.org/syp-bieco-pr-01333/detection-tool
-    #     restart: unless-stopped
-    #     environment:
-    #         TOOL_TOKEN: 8Xoz0OlwRB+sumesL6n67nuwG7cg
-    #         ORCHESTRATOR_TOKEN: YUdHm0PnPJCyP
-    #         ORCHESTRATOR_URL: http://bieco-orchestrator:4000
-    #         ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
-    #     volumes:
-    #         - bieco-data:/platform
-    #     depends_on:
-    #         - bieco-orchestrator
-    #     networks:
-    #         - bieco-net
+    detection-tool:
+        image: harbor.gradiant.org/syp-bieco-pr-01333/detection-tool
+        restart: unless-stopped
+        environment:
+            TOOL_TOKEN: 8Xoz0OlwRB+sumesL6n67nuwG7cg
+            ORCHESTRATOR_TOKEN: YUdHm0PnPJCyP
+            ORCHESTRATOR_URL: http://bieco-orchestrator:4000
+            ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
+        volumes:
+            - bieco-data:/platform
+        depends_on:
+            - bieco-orchestrator
+        networks:
+            - bieco-net
     
-    # propagation-tool:
-    #     image: harbor.gradiant.org/syp-bieco-pr-01333/propagation-tool
-    #     restart: unless-stopped
-    #     environment:
-    #         TOOL_TOKEN: 8Xoz0OlwRB+sumesL6n67nuwG7cg
-    #         ORCHESTRATOR_TOKEN: YUdHm0PnPJCyP
-    #         ORCHESTRATOR_URL: http://bieco-orchestrator:4000
-    #         ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
-    #     volumes:
-    #         - bieco-data:/platform
-    #     depends_on:
-    #         - bieco-orchestrator
-    #     networks:
-    #         - bieco-net
+    propagation-tool:
+        image: harbor.gradiant.org/syp-bieco-pr-01333/propagation-tool
+        restart: unless-stopped
+        environment:
+            TOOL_TOKEN: 8Xoz0OlwRB+sumesL6n67nuwG7cg
+            ORCHESTRATOR_TOKEN: YUdHm0PnPJCyP
+            ORCHESTRATOR_URL: http://bieco-orchestrator:4000
+            ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
+        volumes:
+            - bieco-data:/platform
+        depends_on:
+            - bieco-orchestrator
+        networks:
+            - bieco-net
 
-    # # ---- MUD Updater (UMU) ----
-    # mud-updater:
-    #     image: dridix/umu-bieco:umu-image
-    #     ports:
-    #         - "5555:5555"
-    #     networks:
-    #         - bieco-net
-    #     volumes:
-    #         - bieco-data:/platform
+    # ---- MUD Updater (UMU) ----
+    mud-updater:
+        image: dridix/umu-bieco:umu-image
+        ports:
+            - "5555:5555"
+        networks:
+            - bieco-net
+        volumes:
+            - bieco-data:/platform
     
     # ---- Runtime Monitoring (CNR) ----
     runtime-monitoring:
@@ -250,26 +245,26 @@ services:
             - /local/source/
             - bieco-data:/platform
     
-    # # ---- Ontology Manager (CNR) ----
-    # ontology-manager:
-    #     image: saiddao/ontologymanager:latest
-    #     ports:
-    #         - "62626:62626"
-    #         - "8282:8282"  
-    #     networks:
-    #         - bieco-net
-    #     volumes:
-    #         - bieco-data:/platform
+    # ---- Ontology Manager (CNR) ----
+    ontology-manager:
+        image: saiddao/ontologymanager:latest
+        ports:
+            - "62626:62626"
+            - "8282:8282"  
+        networks:
+            - bieco-net
+        volumes:
+            - bieco-data:/platform
     
-    # # ---- Failure Prediction (UTC) ----
-    # failure-prediction:
-    #     image: ovidiucosmabm/fpt:latest
-    #     ports:
-    #         - "1500:8080"
-    #     networks:
-    #         - bieco-net
-    #     volumes:
-    #         - bieco-data:/platform
+    # ---- Failure Prediction (UTC) ----
+    failure-prediction:
+        image: ovidiucosmabm/fpt:latest
+        ports:
+            - "1500:8080"
+        networks:
+            - bieco-net
+        volumes:
+            - bieco-data:/platform
 
 
 volumes:
