modified migration of DB, dependance on bieco orchestrator

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,8 @@ services:
         ports:
             - 4500:8080
         restart: unless-stopped
+        depends_on:
+            - "bieco-orchestrator"
         networks:
             - bieco-net
     
