introduced the staging methodology, various updates after the Pisa meeting

--- a/.env
+++ b/.env
@@ -2,12 +2,19 @@
 # application name in the docker environment
 APP_NAME = Bieco-Platform
 
-# ports used 
+# JSON Logging
+LOGGING_MAX_SIZE = 10m
+
+# ports used
 ORCHESTRATOR_PUBLIC_PORT = 4000
 UI_PUBLIC_PORT = 1000
 DB_PUBLIC_PORT = 3310  # only if enabled, not enabled by default
-ACTIVEMQ_PUBLIC_PORT = 61616
+ACTIVEMQ_PUBLIC_PORT = 61617
 ACTIVEMQ_ADMIN_PORT = 8161
+FAILURE_PREDICTION_PUBLIC_PORT = 1500
+ONTOLOGY_MANAGER_PUBLIC_PORT = 8282
+RUNTIME_MONITORING_PUBLIC_PORT = 4700
+MUD_UPDATER_PUBLIC_PORT = 5555
 
 # database connection used internally by the UI and Orchestrator.
 DB_USER = bieco
