--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,185 +87,185 @@ services:
             - bieco-net
 
     # ---- Predictive Simulation (IESE) ----
-    # predictive-simulation:
-    #     image: emiliacioroaica/ps_prototype:latest
-    #     depends_on:
-    #         - "activemq"
-    #     restart: unless-stopped
-    #     networks:
-    #         - bieco-net
-    #     environment:
-    #         SPRING_APPLICATION_JSON: '{
-    #             "orchestratorToken" : "6sdQpBgkrL6yu",
-    #             "orchestratorUrl" : "http://bieco-orchestrator:4000/orchestrator/biecointerface",
-    #             "token" : "32z27348127482371kk8(())=)=)(=))(76hgh))",
-    #             "AMQ_URL" : "tcp://activemq:61616"}'
+    predictive-simulation:
+        image: emiliacioroaica/ps_prototype:latest
+        depends_on:
+            - "activemq"
+        restart: unless-stopped
+        networks:
+            - bieco-net
+        environment:
+            SPRING_APPLICATION_JSON: '{
+                "orchestratorToken" : "6sdQpBgkrL6yu",
+                "orchestratorUrl" : "http://bieco-orchestrator:4000/orchestrator/biecointerface",
+                "token" : "32z27348127482371kk8(())=)=)(=))(76hgh))",
+                "AMQ_URL" : "tcp://activemq:61616"}'
 
-    # activemq:
-    #     image: rmohr/activemq:latest
-    #     ports:
-    #         # - "1883:1883"  # enable only if needed
-    #         # - "5672:5672"  # enable only if needed
-    #         - "${ACTIVEMQ_ADMIN_PORT}:8161"
-    #         # - "61613:61613"  # enable only if needed
-    #         # - "61614:61614"  # enable only if needed
-    #         - "${ACTIVEMQ_PUBLIC_PORT}:61616"
-    #     volumes:
-    #         - bieco-data:/activemq
-    #     networks:
-    #         - bieco-net
+    activemq:
+        image: rmohr/activemq:latest
+        ports:
+            # - "1883:1883"  # enable only if needed
+            # - "5672:5672"  # enable only if needed
+            - "${ACTIVEMQ_ADMIN_PORT}:8161"
+            # - "61613:61613"  # enable only if needed
+            # - "61614:61614"  # enable only if needed
+            - "${ACTIVEMQ_PUBLIC_PORT}:61616"
+        volumes:
+            - bieco-data:/activemq
+        networks:
+            - bieco-net
 
     # ---- Security Scorer (7B) ----
-    # api:
-    #     image: rpiliszek7b/bieco_security_scorer_api:latest
-    #     read_only: true
-    #     networks:
-    #         - bieco-net
+    api:
+        image: rpiliszek7b/bieco_security_scorer_api:latest
+        read_only: true
+        networks:
+            - bieco-net
 
-    # security-scorer:
-    #     image: rpiliszek7b/bieco_security_scorer_integrator:latest
-    #     read_only: true
-    #     environment:
-    #         ORCHESTRATOR_TOKEN: rK6ILPiurtfFV
-    #         ORCHESTRATOR_URL: http://bieco-orchestrator:4000/orchestrator/biecointerface
-    #         INTEGRATOR_TOKEN: JAD7A6WAD454AS33AF4
-    #         TOOL_URL: http://api:8000/estimate_risk
-    #     tmpfs:
-    #         - /tmp
-    #     networks:
-    #         - bieco-net
+    security-scorer:
+        image: rpiliszek7b/bieco_security_scorer_integrator:latest
+        read_only: true
+        environment:
+            ORCHESTRATOR_TOKEN: rK6ILPiurtfFV
+            ORCHESTRATOR_URL: http://bieco-orchestrator:4000/orchestrator/biecointerface
+            INTEGRATOR_TOKEN: JAD7A6WAD454AS33AF4
+            TOOL_URL: http://api:8000/estimate_risk
+        tmpfs:
+            - /tmp
+        networks:
+            - bieco-net
 
     # ---- FUZZING TOOL, FORECASTING TOOL, DETECTION TOOL (GRADIANT) ----
-    # fuzzing-db:
-    #     image: mysql:5.7
-    #     restart: unless-stopped
-    #     environment:
-    #         MYSQL_DATABASE: 'fuzzing'
-    #         MYSQL_USER: 'user'
-    #         MYSQL_PASSWORD: ${DB_PASSWORD}
-    #         MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-    #     ports:
-    #         - '13306:3306'
-    #     networks:
-    #         - bieco-net
-    #     volumes:
-    #         - bieco-data-fuzzing:/var/lib/mysql
+    fuzzing-db:
+        image: mysql:5.7
+        restart: unless-stopped
+        environment:
+            MYSQL_DATABASE: 'fuzzing'
+            MYSQL_USER: 'user'
+            MYSQL_PASSWORD: ${DB_PASSWORD}
+            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+        ports:
+            - '13306:3306'
+        networks:
+            - bieco-net
+        volumes:
+            - bieco-data-fuzzing:/var/lib/mysql
 
-    # fuzzing-tool:
-    #     image: harbor.gradiant.org/syp-bieco-pr-01333/fuzzing-tool:latest
-    #     restart: unless-stopped
-    #     environment:
-    #         TOOL_TOKEN: 8Xoz0OlwRB+sumesL6n67nuwG7cg
-    #         ORCHESTRATOR_TOKEN: YUdHm0PnPJCyP
-    #         ORCHESTRATOR_URL: http://bieco-orchestrator:4000
-    #         ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
-    #         FUZZDB_DRIVER: 'mysql+asyncmy'
-    #         FUZZDB_HOST: 'fuzzing-db'
-    #         FUZZDB_PORT: 3306
-    #         FUZZDB_USER: 'root'
-    #         FUZZDB_PASSWORD: ${DB_PASSWORD}
-    #         # API-AUTHORIZATION-BEARER-TOKEN: Bearer token-here
-    #     volumes:
-    #        - bieco-data:/platform
-    #     depends_on:
-    #         - fuzzing-db
-    #         - bieco-orchestrator
-    #     networks:
-    #         - bieco-net
+    fuzzing-tool:
+        image: harbor.gradiant.org/syp-bieco-pr-01333/fuzzing-tool:latest
+        restart: unless-stopped
+        environment:
+            TOOL_TOKEN: 8Xoz0OlwRB+sumesL6n67nuwG7cg
+            ORCHESTRATOR_TOKEN: YUdHm0PnPJCyP
+            ORCHESTRATOR_URL: http://bieco-orchestrator:4000
+            ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
+            FUZZDB_DRIVER: 'mysql+asyncmy'
+            FUZZDB_HOST: 'fuzzing-db'
+            FUZZDB_PORT: 3306
+            FUZZDB_USER: 'root'
+            FUZZDB_PASSWORD: ${DB_PASSWORD}
+            # API-AUTHORIZATION-BEARER-TOKEN: Bearer token-here
+        volumes:
+           - bieco-data:/platform
+        depends_on:
+            - fuzzing-db
+            - bieco-orchestrator
+        networks:
+            - bieco-net
 
-    # forecasting-tool:
-    #     image: harbor.gradiant.org/syp-bieco-pr-01333/forecasting-tool
-    #     restart: unless-stopped
-    #     environment:
-    #         TOOL_TOKEN: 8Xoz0OlwRB+sumesL6n67nuwG7cg
-    #         ORCHESTRATOR_TOKEN: YUdHm0PnPJCyP
-    #         ORCHESTRATOR_URL: http://bieco-orchestrator:4000
-    #         ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
-    #         TOKEN_TWITTER: AAAAAAAAAAAAAAAAAAAAAMSKgQEAAAAAR5eW3Lh2GlesFpl0rqiIPBcC5gA%3DU0u5XDi9IwzH9xcGG7d7Rcy9BUXhFgxIBDk7ACjE80y11QpGXr
-    #     volumes:
-    #         - bieco-data:/platform
-    #     depends_on:
-    #         - bieco-orchestrator
-    #     networks:
-    #         - bieco-net
+    forecasting-tool:
+        image: harbor.gradiant.org/syp-bieco-pr-01333/forecasting-tool
+        restart: unless-stopped
+        environment:
+            TOOL_TOKEN: 8Xoz0OlwRB+sumesL6n67nuwG7cg
+            ORCHESTRATOR_TOKEN: YUdHm0PnPJCyP
+            ORCHESTRATOR_URL: http://bieco-orchestrator:4000
+            ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
+            TOKEN_TWITTER: AAAAAAAAAAAAAAAAAAAAAMSKgQEAAAAAR5eW3Lh2GlesFpl0rqiIPBcC5gA%3DU0u5XDi9IwzH9xcGG7d7Rcy9BUXhFgxIBDk7ACjE80y11QpGXr
+        volumes:
+            - bieco-data:/platform
+        depends_on:
+            - bieco-orchestrator
+        networks:
+            - bieco-net
 
-    # detection-tool:
-    #     image: harbor.gradiant.org/syp-bieco-pr-01333/detection-tool
-    #     restart: unless-stopped
-    #     environment:
-    #         TOOL_TOKEN: 8Xoz0OlwRB+sumesL6n67nuwG7cg
-    #         ORCHESTRATOR_TOKEN: YUdHm0PnPJCyP
-    #         ORCHESTRATOR_URL: http://bieco-orchestrator:4000
-    #         ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
-    #     volumes:
-    #         - bieco-data:/platform
-    #     depends_on:
-    #         - bieco-orchestrator
-    #     networks:
-    #         - bieco-net
+    detection-tool:
+        image: harbor.gradiant.org/syp-bieco-pr-01333/detection-tool
+        restart: unless-stopped
+        environment:
+            TOOL_TOKEN: 8Xoz0OlwRB+sumesL6n67nuwG7cg
+            ORCHESTRATOR_TOKEN: YUdHm0PnPJCyP
+            ORCHESTRATOR_URL: http://bieco-orchestrator:4000
+            ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
+        volumes:
+            - bieco-data:/platform
+        depends_on:
+            - bieco-orchestrator
+        networks:
+            - bieco-net
 
-    # propagation-tool:
-    #     image: harbor.gradiant.org/syp-bieco-pr-01333/propagation-tool
-    #     restart: unless-stopped
-    #     environment:
-    #         TOOL_TOKEN: 8Xoz0OlwRB+sumesL6n67nuwG7cg
-    #         ORCHESTRATOR_TOKEN: YUdHm0PnPJCyP
-    #         ORCHESTRATOR_URL: http://bieco-orchestrator:4000
-    #         ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
-    #     volumes:
-    #         - bieco-data:/platform
-    #     depends_on:
-    #         - bieco-orchestrator
-    #     networks:
-    #         - bieco-net
+    propagation-tool:
+        image: harbor.gradiant.org/syp-bieco-pr-01333/propagation-tool
+        restart: unless-stopped
+        environment:
+            TOOL_TOKEN: 8Xoz0OlwRB+sumesL6n67nuwG7cg
+            ORCHESTRATOR_TOKEN: YUdHm0PnPJCyP
+            ORCHESTRATOR_URL: http://bieco-orchestrator:4000
+            ORCHESTRATOR_ENDPOINT: /orchestrator/biecointerface
+        volumes:
+            - bieco-data:/platform
+        depends_on:
+            - bieco-orchestrator
+        networks:
+            - bieco-net
 
     # ---- MUD Updater (UMU) ----
-    # mud-updater:
-    #     image: dridix/umu-bieco:umu-image
-    #     ports:
-    #         - "${MUD_UPDATER_PUBLIC_PORT}:5555"
-    #     networks:
-    #         - bieco-net
-    #     volumes:
-    #         - bieco-data:/platform
+    mud-updater:
+        image: dridix/umu-bieco:umu-image
+        ports:
+            - "${MUD_UPDATER_PUBLIC_PORT}:5555"
+        networks:
+            - bieco-net
+        volumes:
+            - bieco-data:/platform
 
     # ---- Runtime Monitoring (CNR) ----
-    # runtime-monitoring:
-    #     image: acalabro/concern:bieco
-    #     restart: unless-stopped
-    #     environment:
-    #         ACTIVEMQ: tcp://activemq:61616
-    #         DB_USERNAME: bieco
-    #         DB_PASSWORD: biecoroot
-    #     depends_on:
-    #         - "activemq"
-    #     ports:
-    #         - "${RUNTIME_MONITORING_PUBLIC_PORT}:8181"
-    #     networks:
-    #         - bieco-net
-    #     volumes:
-    #         - /local/source/
-    #         - bieco-data:/platform
+    runtime-monitoring:
+        image: acalabro/concern:bieco
+        restart: unless-stopped
+        environment:
+            ACTIVEMQ: tcp://activemq:61616
+            DB_USERNAME: bieco
+            DB_PASSWORD: biecoroot
+        depends_on:
+            - "activemq"
+        ports:
+            - "${RUNTIME_MONITORING_PUBLIC_PORT}:8181"
+        networks:
+            - bieco-net
+        volumes:
+            - /local/source/
+            - bieco-data:/platform
 
     # ---- Ontology Manager (CNR) ----
-    # ontology-manager:
-    #     image: saiddao/ontologymanager:latest
-    #     ports:
-    #         - "${ONTOLOGY_MANAGER_PUBLIC_PORT}:8282"
-    #     networks:
-    #         - bieco-net
-    #     volumes:
-    #         - bieco-data:/platform
+    ontology-manager:
+        image: saiddao/ontologymanager:latest
+        ports:
+            - "${ONTOLOGY_MANAGER_PUBLIC_PORT}:8282"
+        networks:
+            - bieco-net
+        volumes:
+            - bieco-data:/platform
 
     # ---- Failure Prediction (UTC) ----
-    # failure-prediction:
-    #     image: ovidiucosmabm/fpt:version3
-    #     ports:
-    #         - "${FAILURE_PREDICTION_PUBLIC_PORT}:8080"
-    #     networks:
-    #         - bieco-net
-    #     volumes:
-    #         - bieco-data:/platform
+    failure-prediction:
+        image: ovidiucosmabm/fpt:version3
+        ports:
+            - "${FAILURE_PREDICTION_PUBLIC_PORT}:8080"
+        networks:
+            - bieco-net
+        volumes:
+            - bieco-data:/platform
 
 volumes:
     bieco-data:
